# langchain-job-scraper

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
.github/workflows/: publish.yml
config/: job_search.yaml
profiles/: candidate_profile.md
src/: config.py  logging_config.py
src/agents/: main.py  scraper.py  summarizer.py
src/db/: models.py  operations.py
src/pipeline/: __init__.py  config.py  emailing.py  graph.py  lever_discovery.py  llm_agents.py  models.py  scoring.py  sources.py
src/scripts/: daily_summary.py  scraper_benchmark_utils.py  test_custom_curl_cffi.py  test_custom_playwright_tool.py  test_custom_seleniumbase.py  test_langchain_async_html_loader.py  test_langchain_recursive_url_loader.py  test_langchain_scrapers.py  test_langchain_webbase_loader.py  test_official_langchain_httpx_tool.py  test_official_langchain_requests_tool.py  test_playwright.py  test_stealth_scrapers.py
src/tools/: custom_stealth_tools.py  langchain_fetch_tools.py  playwright_scraper.py  retrieval_utils.py
tests/: conftest.py  test_config_loader.py  test_emailing.py  test_graph_integration.py  test_lever_discovery.py  test_lever_discovery_queries.py  test_profile_parser.py  test_scoring.py  test_search_plan.py  test_source_adapters.py  test_summarizer.py  test_url_and_db.py
tests/fixtures/: greenhouse_jobs.json  lever_jobs.json  noisy_candidate_profile.md  wttj_algolia.json
